# mayoCHIP8

./: CMakeLists.txt  README.md
include/: chip8.hpp
src/: chip8.cpp  chip8.hpp  main.cpp  platform.cpp  platform.hpp
